# zed-fsharp

./: Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: release.yml
languages/fsharp/: config.toml  highlights.scm  outline.scm
src/: fsac.rs  lib.rs
